implementation add and edit clients

--- a/SysPaciente/SysPaciente.csproj
+++ b/SysPaciente/SysPaciente.csproj
@@ -55,6 +55,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FrmAddEditClient.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmAddEditClient.Designer.cs">
+      <DependentUpon>FrmAddEditClient.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FrmAdm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,6 +95,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FrmAddEditClient.resx">
+      <DependentUpon>FrmAddEditClient.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmAdm.resx">
       <DependentUpon>FrmAdm.cs</DependentUpon>
