--- a/SysPaciente/SysPaciente.csproj
+++ b/SysPaciente/SysPaciente.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Entities\Enums\Status.cs" />
     <Compile Include="Entities\FormLoader.cs" />
     <Compile Include="Entities\MenuButtonController.cs" />
+    <Compile Include="Entities\Settings.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
