--- a/SysPaciente/SysPaciente.csproj
+++ b/SysPaciente/SysPaciente.csproj
@@ -85,6 +85,12 @@
     <Compile Include="Forms\FrmAdmConsultations.Designer.cs">
       <DependentUpon>FrmAdmConsultations.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FrmClientHistorical.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FrmClientHistorical.Designer.cs">
+      <DependentUpon>FrmClientHistorical.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FrmClients.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -131,6 +137,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmAdmConsultations.resx">
       <DependentUpon>FrmAdmConsultations.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FrmClientHistorical.resx">
+      <DependentUpon>FrmClientHistorical.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FrmClients.resx">
       <DependentUpon>FrmClients.cs</DependentUpon>
