using thread to load clients

--- a/SysPaciente/SysPaciente.csproj
+++ b/SysPaciente/SysPaciente.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Entities\ScheduleManager.cs" />
     <Compile Include="Entities\Schedules.cs" />
     <Compile Include="Entities\Settings.cs" />
+    <Compile Include="Entities\ThreadHelper.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
